...
            .fillMaxSize()
            .verticalScroll(state = state),
        verticalArrangement = Arrangement.spacedBy(18.dp, alignment = Alignment.Top),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        ProjectRepresentationButton(
            text = "Add new Project",
            icon = Icons.Default.Add,
            onClick = { viewModel.onEvent(ProjectOverviewEvent.OnNewProjectClick) }
        )

        ProjectRepresentationButton(
            text = "Project from Template",
            icon = Icons.Default.Add,
            onClick = { viewModel.onEvent(ProjectOverviewEvent.OnTemplateProjectClick(isOpen = true)) }
        )

        for(project in projects) {
            ProjectRepresentationButton(
...
