...
                ) {
                    Text(text = it)
                    Box(
                        modifier = Modifier
                            .size(height)
                            .wrapContentSize(Alignment.Center)
                            .clickable(onClick = { onClickItem(index) }).testTag("Delete")
                    ) {
                        Icon(
                            imageVector = elementIcon,
                            contentDescription = label,
                            tint = MaterialTheme.colors.onBackground,
                        )
...
