...
package com.pseandroid2.dailydata.util.ui

import androidx.compose.ui.graphics.Color

enum class Wallpapers(val value : Color, val representation: String) {
    ORANGE(Color(0xFFF57C00), "Orange"),
    GREEN(Color(0xFF388E3C), "Green"),
    BLUE(Color(0xFF2196F3), "Blue")
}
