...
    memberColor : Color
) {
    Column {
        Surface(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("Wallpaper"),
            color = background
        ) {
            Column(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(16.dp),
...
